<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background_gradient"
        tools:context=".login.view.LoginFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_user_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:elevation="8dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#41ba7a"
            app:civ_border_overlay="true"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageview_user_login"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_user_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Login" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true" />

                <Button
                    android:id="@+id/btn_goto_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/login_background_button"
                    android:onClick="login"
                    android:text="Sign in"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btn_login_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/login_background_button_facebook"
                    android:onClick="loginWithMyFacebookButtom"
                    android:text="Login with facebook"
                    android:textColor="#ffffff" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>